// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Початок роботи                                                                                                     │
│                                                                                                                      │
│   Як ви бажаєте пройти аутентифікацію для цього проекту?                                                             │
│                                                                                                                      │
│   (selected) Увійти через Google(not selected) Використовувати ключ Gemini API(not selected) Vertex AI               │
│                                                                                                                      │
│   Something went wrong                                                                                               │
│                                                                                                                      │
│   (Натисніть Enter для вибору)                                                                                       │
│                                                                                                                      │
│   Умови використання та Повідомлення про конфіденційність Gemini CLI                                                 │
│                                                                                                                      │
│   https://github.com/santoni-star/gemini-ua/blob/main/docs/tos-privacy.md                                            │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Початок роботи                                                                                                     │
│                                                                                                                      │
│   Як ви бажаєте пройти аутентифікацію для цього проекту?                                                             │
│                                                                                                                      │
│   (selected) Увійти через Google(not selected) Використовувати ключ Gemini API(not selected) Vertex AI               │
│                                                                                                                      │
│   (Натисніть Enter для вибору)                                                                                       │
│                                                                                                                      │
│   Умови використання та Повідомлення про конфіденційність Gemini CLI                                                 │
│                                                                                                                      │
│   https://github.com/santoni-star/gemini-ua/blob/main/docs/tos-privacy.md                                            │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with enforced auth type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Початок роботи                                                                                                     │
│                                                                                                                      │
│   Як ви бажаєте пройти аутентифікацію для цього проекту?                                                             │
│                                                                                                                      │
│   (selected) Використовувати ключ Gemini API                                                                         │
│                                                                                                                      │
│   (Натисніть Enter для вибору)                                                                                       │
│                                                                                                                      │
│   Умови використання та Повідомлення про конфіденційність Gemini CLI                                                 │
│                                                                                                                      │
│   https://github.com/santoni-star/gemini-ua/blob/main/docs/tos-privacy.md                                            │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
